k8s/microservice/artifacts/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway-server
          image: registry:5000/gateway-server
          ports:
          - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  ports:
    - name: gateway-ports
      protocol: TCP
      port: 80
      targetPort: 9000
  selector:
    app: gateway
