k8s/microservice/artifacts/ip.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-app
  labels:
    app: ip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ip
  template:
    metadata:
      labels:
        app: ip
    spec:
      containers:
        - name: ip-server
          image: registry:5000/ip-server
          ports:
            - containerPort: 9002
          volumeMounts:
              - name: config-volume
                mountPath: /config
                subPath: special.how
      volumes:
          - name: config-volume
            configMap:
              name: app-config
---
apiVersion: v1
kind: Service
metadata:
  name: ip-service
spec:
  type: ClusterIP
  clusterIP: 10.99.212.118
  ports:
    - name: ip-ports
      protocol: TCP
      port: 9002
      targetPort: 9002
  selector:
    app: ip
